[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rdev = {version = '0.5.1', features = ['serialize']}
serde_json = '1'
tokio = { version = '1.19.2', features = ['full'] }
tokio-util = '0.7'
hyper = {version = "0.14", features = ['full']}
monoio = {path= '../monoio/monoio'}
lazy_static = "1"
libc = "0.2"
bytes = "1"
tower = "0.4"
tower-http = "0.3"
h2 = "0.3"
anyhow = "1"
http = "0.2"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
# source = "src/main.rs"

# [[example]]
# name = "keyboard-mouse"
# path = "src/keyboard_mouse.rs"

# [[bin]]
# name = "keyboard-mouse"
# path = "src/keyboard_mouse.rs"


# Target Settings
# name = "foo"           # The name of the target.
# path = "src/lib.rs"    # The source file of the target.
# test = true            # Is tested by default.
# doctest = true         # Documentation examples are tested by default.
# bench = true           # Is benchmarked by default.
# doc = true             # Is documented by default.
# plugin = false         # Used as a compiler plugin (deprecated).
# proc-macro = false     # Set to `true` for a proc-macro library.
# harness = true         # Use libtest harness.
# edition = "2015"       # The edition of the target.
# crate-type = ["lib"]   # The crate types to generate.
# required-features = [] # Features required to build this target (N/A for lib).


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]